--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 
   <footer>
-    Made with ❤️ in Georgia.
+    Made with ❤️ in London.
   </footer>
   <script src="./index.js"></script>
 </body>
