--- a/Desktop/ატვირთულები/Miako webpage/public/contact.html
+++ b/Desktop/ატვირთულები/Miako webpage/public/contact.html
@@ -3,7 +3,7 @@
 <p>Email: Miako@gmail.com</p>
 <p>Address:</p>
 <p>
-  123 North Street<br />
+  Onashvili street<br />
   Tbilisi<br />
   Georgia <br />
 </p>
