--- a/Desktop/ატვირთულები/11.3 TinDog Project/index.html
+++ b/Desktop/ატვირთულები/11.3 TinDog Project/index.html
@@ -115,13 +115,13 @@
         <div class="container">
           <div class="row">
             <div class="col-lg-3 col-sm-12">
-              <img src="./images/techcrunch.png" alt="techcrunch" height="30">
+              <img src="./images/techcrunch.png" alt="" height="30">
             </div>
             <div class="col-lg-3 col-sm-12">
-              <img src="./images/mashable.png" alt="mashable" height="30">
+              <img src="./images/mashable.png" alt="" height="30">
             </div>
             <div class="col-lg-3 col-sm-12">
-              <img src="./images/bizinsider.png" alt="bizinsider" height="30">
+              <img src="./images/bizinsider.png" alt="" height="30">
             </div>
             <div class="col-lg-3 col-sm-12">
               <img src="./images/tnw.png" alt="tnw" height="30">
@@ -179,7 +179,7 @@
             <div class="card-body">
               <h1 class="card-title pricing-card-title">$29<small class="text-body-secondary fw-light">/mo</small></h1>
               <ul class="list-unstyled mt-3 mb-4">
-                <li>Pirority Listing</li>
+                <li>Priority Listing</li>
                 <li>Unlimited Matches & Messages</li>
                 <li>Unlimited App Usage</li>
               </ul>
